Fixed code wrap.

--- a/themes/pure/static/css/styles.css
+++ b/themes/pure/static/css/styles.css
@@ -211,6 +211,8 @@ code {
     font-family: 'Ubuntu Mono';
     font-size: 14px;
     padding: .5em;
+    word-wrap: normal;
+    overflow: auto;
     white-space: pre;
 }
 
